--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "js-cookie": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-cookie": "^3.1.2",
     "react-datetime-picker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
