--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-cookie": "^3.1.2",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
